--- a/bg.html
+++ b/bg.html
@@ -5,7 +5,9 @@
  * LICENSE file.
 -->
 <html>
+
   <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 <script>
 chrome.extension.onRequest.addListener(
   function(request, sender, sendResponse) {
