--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,7 @@
 	}
 	
 </style>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js" charset="utf-8"></script>
 <script type="text/javascript">
 $(document).ready(function() {
 	
