--- a/bg.html
+++ b/bg.html
@@ -1,15 +1,19 @@
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<script>
 			chrome.extension.onRequest.addListener(
 			  function(request, sender, sendResponse) {
 			    
-			    if (request.greeting == "getVars")
-			      sendResponse({k: window.localStorage.getItem("k"),
-					s:window.localStorage.getItem("s")});
-			    else
-			      sendResponse({}); // snub them.
+			    if (request.greeting == "getVars") {
+					sendResponse({
+						k:window.localStorage.getItem("k"),
+						s:window.localStorage.getItem("s"),
+						a:window.localStorage.getItem("a")
+					});
+				} else {
+					sendResponse({}); // snub them.
+				}
 			  });
 			
 				//chrome.tabs.insertCSS(null, {code:"h1{color:red;}"});
